# 490-final

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
report/: infield_defense_paper.tex
results/: eval.csv  eval_summary.csv
results/analysis/: method_summary.csv  success_by_n_robots.csv  success_by_vmax.csv
src/ignore/: infield_defense_paper.tex
src/infield_defense/: __init__.py  analyze_eval.py  ball.py  baserunning.py  cli.py  config.py  coordination.py  evaluate.py  formation.py  simulation.py
tests/: test_analyze_eval.py  test_evaluate.py  test_fielding_assignment.py  test_runner_play.py
