[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "infield-defense-sim"
version = "0.1.0"
description = "Multi-robot infield defense: distributed intercept and relay coordination (MRS 490)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
infield-sim = "infield_defense.cli:main"
infield-eval = "infield_defense.evaluate:main"
infield-analyze = "infield_defense.analyze_eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
